# backend/swagger_output.json
@@ -29,6 +29,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -70,11 +73,40 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
     },
-    "/api/users/{id}": {
+    "/api/users/{email}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Get User by email",
+        "description": "",
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
       "put": {
         "tags": [
           "Users"
@@ -83,7 +115,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "email",
             "in": "path",
             "required": true,
             "type": "string"
@@ -118,6 +150,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       },
@@ -129,7 +164,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "email",
             "in": "path",
             "required": true,
             "type": "string"
@@ -138,11 +173,14 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
     },
-    "/login": {
+    "/api/login": {
       "post": {
         "tags": [
           "Users"
@@ -179,7 +217,7 @@
         }
       }
     },
-    "/messages/{symbol}": {
+    "/api/messages/{symbol}": {
       "get": {
         "description": "",
         "parameters": [
@@ -245,7 +283,42 @@
         }
       }
     },
-    "/alpaca/bars/{asset_class}/{symbol}/{start}/{end}/{timeframe}": {
+    "/api/messages/{id}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/alpaca/bars/{asset_class}/{symbol}/{start}/{end}/{timeframe}": {
       "get": {
         "description": "",
         "parameters": [
@@ -287,7 +360,7 @@
         }
       }
     },
-    "/alpaca/symbols": {
+    "/api/alpaca/symbols": {
       "get": {
         "description": "",
         "responses": {
@@ -297,7 +370,7 @@
         }
       }
     },
-    "/auth/signup": {
+    "/api/auth/signup": {
       "post": {
         "tags": [
           "Users"
@@ -346,7 +419,7 @@
         }
       }
     },
-    "/auth/login": {
+    "/api/auth/login": {
       "post": {
         "tags": [
           "Users"
